This is the updated solution of the problem "Comparable Books".