@@ -1,7 +1,5 @@
 package T09IteratorsAndComparators.Lab.P03ComparableBook;
 
-import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class Book implements Comparable<Book>{
@@ -9,16 +7,15 @@ public class Book implements Comparable<Book>{
     private int year;
     private List<String> authors;
 
-    public Book(String title, int year, String...authors) {
-        this.title = title;
-        this.year = year;
-        this.authors = new ArrayList<>(Arrays.asList(authors));
+    public Book(String title, int year, String... authors) {
+        setTitle(title);
+        setYear(year);
+        setAuthors(List.of(authors));
     }
 
     public String getTitle() {
         return title;
     }
-
     public void setTitle(String title) {
         this.title = title;
     }
@@ -26,6 +23,7 @@ public class Book implements Comparable<Book>{
     public int getYear() {
         return year;
     }
+
     public void setYear(int year) {
         this.year = year;
     }
@@ -39,12 +37,14 @@ public class Book implements Comparable<Book>{
     }
 
     @Override
-   public int compareTo(Book otherBook) {
-        int result = this.title.compareTo(otherBook.getTitle());
-         if (result == 0) {
-            return Integer.compare(this.year, otherBook.getYear());
-        }
-         return result;
+    public String toString() {
+        return getTitle() + " " + getYear() + " " +
+                getAuthors().toString().replaceAll("[\\[\\]]", "");
+    }
+
+    @Override
+    public int compareTo(Book book2) {
+        return this.title.compareTo(book2.getTitle());
     }
 
 }
